[package]
name = "msb-cloud-adapter"
description = "HTTP adapter exposing a local microsandbox runtime through the cloud backend API."
version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
edition.workspace = true
publish = false

[[bin]]
name = "msb-cloud-adapter"
path = "bin/main.rs"

[dependencies]
axum.workspace = true
anyhow.workspace = true
bytes.workspace = true
chrono.workspace = true
clap.workspace = true
futures.workspace = true
microsandbox = { workspace = true, features = ["keyring", "net", "prebuilt"] }
microsandbox-protocol.workspace = true
microsandbox-types.workspace = true
microsandbox-utils.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
